--- a/return-to-running-program.ipynb
+++ b/return-to-running-program.ipynb
@@ -46,9 +46,11 @@
     "from datetime import datetime, timedelta\n",
     "from zoneinfo import ZoneInfo\n",
     "\n",
-    "c = Calendar()\n",
+    "calendar = Calendar()\n",
     "time_zone = ZoneInfo(\"America/Los_Angeles\")\n",
     "start_date = datetime(2025, 10, 27, tzinfo=time_zone)\n",
+    "\n",
+    "# excercise description goes here:\n",
     "\n",
     "# progressive run-walk intervals per week\n",
     "run_walk_intervals = {\n",
@@ -124,7 +126,7 @@
     "            event.begin = (week_start + timedelta(days=day[\"day_offset\"]))\n",
     "            event.make_all_day()\n",
     "\n",
-    "        c.events.add(event)\n",
+    "        calendar.events.add(event)\n",
     "    \n",
     "    # weekly check-in event on Sunday\n",
     "    checkin = Event()\n",
@@ -132,12 +134,12 @@
     "    checkin.begin = (week_start + timedelta(days=6)).replace(hour=18, minute=0, tzinfo=time_zone)\n",
     "    checkin.duration = timedelta(minutes=30)\n",
     "    checkin.description = \"Take 10–15 min to evaluate soreness, recovery, and plan adjustments for next week's training\"\n",
-    "    c.events.add(checkin)\n",
+    "    calendar.events.add(checkin)\n",
     "\n",
     "\n",
     "ics_path = \"return-to-running.ics\"\n",
     "with open(ics_path, \"w\") as f:\n",
-    "    f.write(c.serialize()) \n",
+    "    f.write(calendar.serialize()) \n",
     "    \n",
     "print(f\"Calendar saved to {ics_path}\")\n"
    ]
